[package]
name = "optifree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
assert_unordered = "0.3.5"
crossbeam = "0.8.2"
geo = "0.25.0"
itertools = "0.10.5"
ordered-float = "3.7.0"
percentage = "0.1.0"
rand = "0.8.5"
uom = { version = "0.34.0", features = ["autoconvert"] }
